@@ -212,3 +212,7 @@ MODELCONVERTED.text=Model converted
 RESTRICT.text=RESTRICT
 PROMPTFORPASSWORD.text=Prompt for password before connection establishment
 PLEASEENTERDATABASEPASSWORD.text=Please enter the database password
+HIDE.text=Hide
+MENUSUBJECTAREAS.text=Subject areas
+SHOWALL.text=Show all
+HIDEALL.text=Hide all
